<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <TextView
            android:id="@+id/num_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="phone"
            android:freezesText="true"
            android:hint="@string/phone_number"
            android:maxWidth="480dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/back"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="34sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:clipChildren="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:width="50dp"
                android:maxWidth="50dp"
                android:maxHeight="20dp"
                android:text="@string/_1"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:width="50dp"
                android:maxWidth="50dp"
                android:maxHeight="20dp"
                android:text="@string/_2"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:width="50dp"
                android:maxWidth="50dp"
                android:maxHeight="20dp"
                android:text="@string/_3"
                app:cornerRadius="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:width="50dp"
                android:maxWidth="50dp"
                android:maxHeight="20dp"
                android:text="@string/_4"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:width="50dp"
                android:maxWidth="50dp"
                android:maxHeight="20dp"
                android:text="@string/_5"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:width="50dp"
                android:maxWidth="50dp"
                android:maxHeight="20dp"
                android:text="@string/_6"
                app:cornerRadius="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:width="50dp"
                android:maxWidth="50dp"
                android:maxHeight="20dp"
                android:text="@string/_7"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:width="50dp"
                android:maxWidth="50dp"
                android:maxHeight="20dp"
                android:text="@string/_8"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:width="50dp"
                android:maxWidth="50dp"
                android:maxHeight="20dp"
                android:text="@string/_9"
                app:cornerRadius="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/star"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:width="50dp"
                android:maxWidth="50dp"
                android:maxHeight="20dp"
                android:text="@string/star"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:width="50dp"
                android:maxWidth="50dp"
                android:maxHeight="20dp"
                android:text="@string/_0"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/hash"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:width="50dp"
                android:maxWidth="50dp"
                android:maxHeight="20dp"
                android:text="@string/hash"
                app:cornerRadius="0dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:maxWidth="300dp"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>